--- a/Gate Operations.ipynb
+++ b/Gate Operations.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,17 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(9, 9)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = np.block([[np.array([0]), np.zeros((1,np.shape(Z1)[0]))],[np.zeros((np.shape(Z1)[0],1)),Z1]])\n",
     "\n",
@@ -279,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +314,7 @@
        "       [ 0. ,  1. ,  0. , -0.5,  0.5,  1. ,  0. ,  0.5,  0.5,  0. ]])"
       ]
      },
-     "execution_count": 467,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,17 +325,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2.0007265967753995+1.6998555341096733e-14j),\n",
-       " (1.9992734032246011+1.6998555341096733e-14j)]"
+       "[(2.0007265967753978+2.793772158060648e-15j),\n",
+       " (1.9992734032246022+2.7850985406807638e-15j)]"
       ]
      },
-     "execution_count": 468,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,12 +360,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_modes = 12\n",
-    "r = 0.75\n",
+    "r = 2.5\n",
     "bs_1 = 1\n",
     "bs_2 = 6\n",
     "\n",
@@ -392,19 +384,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2.78, 0.  , 0.  , 0.  ],\n",
-       "       [0.  , 2.78, 0.  , 0.  ],\n",
-       "       [0.  , 0.  , 3.61, 0.  ],\n",
-       "       [0.  , 0.  , 0.  , 3.61]])"
+       "array([[1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,19 +512,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(11.571819162975592+1.3100631690576847e-14j),\n",
-       " (11.571819162975595-1.1102230246251565e-16j),\n",
-       " (-3.92421272378109-1.0658141036401501e-14j),\n",
-       " (-3.924212723781088+9.992007221626409e-16j)]"
+       "[(4.002544672674344+5.658667978636345e-15j),\n",
+       " (4.002544672674346-5.528527295521352e-15j),\n",
+       " (3.99745512938303+5.530298441414061e-15j),\n",
+       " (3.997455129383029-5.610631893164606e-15j)]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2197,11 +2189,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2215,9 +2204,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
